--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <body>
       <h1>Awesome Books</h1>
       <ul class="book-list"></ul>
+
+      <h2>Add a new book</h2>
     <form action="#">
       <input class="title" type="text" placeholder="Title" />
       <input class="author" type="text" placeholder="Author" />
